script to find sensor QE and UVNIR filter functions
s_deriveSensors.m is a working script to search for QE functions and UVNIR filter that can predict the ARRIscope RGB values we measured for the 24 patches illuminated by the 6 spectral lights we measured

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ data/.DS_Store
 scripts/.DS_Store
 data/.DS_Store
 .DS_Store
+scripts/contrast/s_arriConfusionMatrixWithIR.asv
+scripts/contrast/s_arriConfusionMatrixWithIR.asv
+*.m
+scripts/sensors/s_deriveSensors.asv
