tissue reflectances added and small changes to scripts
Added tissue reflectance data taken from published papers
made changes to scripts in order to predict sensor values and confusion matrices for spectral reflectance data that is in the longer wavelengths as well

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,8 @@ scripts/sensors/s_deriveSensors.asv
 data/.DS_Store
 data/.DS_Store
 scripts/.DS_Store
+data/.DS_Store
+.DS_Store
+data/.DS_Store
+data/.DS_Store
+.DS_Store
