adding a new script
to calculate tissue reflectance confusion matrix

--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,2 @@
-
-scripts/.DS_Store
-.DS_Store
-data/.DS_Store
-data/.DS_Store
-.DS_Store
-data/.DS_Store
-scripts/.DS_Store
-data/.DS_Store
-.DS_Store
-scripts/contrast/s_arriConfusionMatrixWithIR.asv
-scripts/contrast/s_arriConfusionMatrixWithIR.asv
-*.m
-scripts/sensors/s_deriveSensors.asv
-data/.DS_Store
-data/.DS_Store
-scripts/.DS_Store
-data/.DS_Store
-.DS_Store
-data/.DS_Store
-data/.DS_Store
-.DS_Store
+.DS*
+local/*
